--- a/Vastar/SideBar/RecipientAddView.xib
+++ b/Vastar/SideBar/RecipientAddView.xib
@@ -84,16 +84,9 @@
                                     <textInputTraits key="textInputTraits"/>
                                 </textField>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DWq-nO-ZrQ">
-                                    <rect key="frame" x="50" y="344" width="87.5" height="40"/>
+                                    <rect key="frame" x="50" y="344" width="92.5" height="40"/>
                                     <constraints>
-                                        <constraint firstAttribute="height" constant="40" id="Zug-AI-ySY"/>
-                                    </constraints>
-                                    <state key="normal" title="Button" backgroundImage="btn"/>
-                                </button>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YlN-NQ-L39">
-                                    <rect key="frame" x="157.5" y="344" width="87.5" height="40"/>
-                                    <constraints>
-                                        <constraint firstAttribute="height" constant="40" id="gOK-TD-di0"/>
+                                        <constraint firstAttribute="height" constant="40" id="xZY-0A-Vwf"/>
                                     </constraints>
                                     <state key="normal" title="Button" backgroundImage="btn"/>
                                 </button>
@@ -115,57 +108,66 @@
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YlN-NQ-L39">
+                                    <rect key="frame" x="152.5" y="344" width="92.5" height="40"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="40" id="vHn-q9-1wN"/>
+                                    </constraints>
+                                    <state key="normal" title="Button" backgroundImage="btn"/>
+                                </button>
                             </subviews>
                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             <constraints>
-                                <constraint firstItem="J5X-Fm-jMh" firstAttribute="leading" secondItem="GAv-Gy-kbb" secondAttribute="trailing" constant="20" id="1cV-hI-VSf"/>
-                                <constraint firstItem="uHn-CM-QqI" firstAttribute="top" secondItem="d3l-sb-MHT" secondAttribute="top" id="1ne-1i-V1t"/>
-                                <constraint firstItem="GAv-Gy-kbb" firstAttribute="top" secondItem="g13-NC-rbX" secondAttribute="bottom" constant="15" id="3HV-k0-zfJ"/>
-                                <constraint firstAttribute="trailing" secondItem="uHn-CM-QqI" secondAttribute="trailing" id="4ZM-FA-6yk"/>
-                                <constraint firstItem="70c-b7-na0" firstAttribute="top" secondItem="GAv-Gy-kbb" secondAttribute="bottom" constant="15" id="DZQ-s8-W94"/>
-                                <constraint firstAttribute="trailing" secondItem="fyA-zO-Zti" secondAttribute="trailing" constant="10" id="EnB-1V-LEm"/>
-                                <constraint firstItem="Bv1-3j-Psr" firstAttribute="centerY" secondItem="OqI-cU-aMm" secondAttribute="centerY" id="HRC-0v-Ep4"/>
-                                <constraint firstItem="70c-b7-na0" firstAttribute="leading" secondItem="6JH-RM-Vhk" secondAttribute="leading" id="HWi-ZK-v4v"/>
-                                <constraint firstItem="1J7-r7-QMV" firstAttribute="top" secondItem="OqI-cU-aMm" secondAttribute="bottom" constant="15" id="JJC-A4-RKX"/>
-                                <constraint firstItem="Bv1-3j-Psr" firstAttribute="leading" secondItem="OqI-cU-aMm" secondAttribute="trailing" constant="20" id="KNu-Kz-UHg"/>
-                                <constraint firstItem="GAv-Gy-kbb" firstAttribute="leading" secondItem="6JH-RM-Vhk" secondAttribute="leading" id="Lwl-UI-kqe"/>
-                                <constraint firstItem="1J7-r7-QMV" firstAttribute="width" secondItem="Ohz-Vz-Af2" secondAttribute="width" id="Nxd-Yc-HO1"/>
-                                <constraint firstItem="Ohz-Vz-Af2" firstAttribute="centerY" secondItem="1J7-r7-QMV" secondAttribute="centerY" id="OL4-lm-xEQ"/>
-                                <constraint firstAttribute="bottom" secondItem="uHn-CM-QqI" secondAttribute="bottom" id="OzI-ug-QdY"/>
-                                <constraint firstAttribute="height" constant="450" id="QNY-lz-s8T"/>
-                                <constraint firstAttribute="trailing" secondItem="g13-NC-rbX" secondAttribute="trailing" constant="10" id="QWH-sL-fI1"/>
-                                <constraint firstItem="Ohz-Vz-Af2" firstAttribute="leading" secondItem="1J7-r7-QMV" secondAttribute="trailing" constant="10" id="Xa7-v9-5U8"/>
-                                <constraint firstAttribute="trailing" secondItem="Ohz-Vz-Af2" secondAttribute="trailing" constant="10" id="YZY-1t-MAz"/>
-                                <constraint firstItem="g13-NC-rbX" firstAttribute="top" secondItem="6JH-RM-Vhk" secondAttribute="bottom" constant="15" id="a4Z-ta-LHn"/>
-                                <constraint firstItem="DWq-nO-ZrQ" firstAttribute="leading" secondItem="d3l-sb-MHT" secondAttribute="leading" constant="50" id="aBO-vb-7ik"/>
-                                <constraint firstItem="uHn-CM-QqI" firstAttribute="leading" secondItem="d3l-sb-MHT" secondAttribute="leading" id="aWk-ee-vwX"/>
-                                <constraint firstItem="J5X-Fm-jMh" firstAttribute="centerY" secondItem="GAv-Gy-kbb" secondAttribute="centerY" id="bO6-4X-XjF"/>
-                                <constraint firstItem="fyA-zO-Zti" firstAttribute="leading" secondItem="6JH-RM-Vhk" secondAttribute="leading" id="bdy-K3-ycZ"/>
-                                <constraint firstItem="YlN-NQ-L39" firstAttribute="leading" secondItem="DWq-nO-ZrQ" secondAttribute="trailing" constant="20" id="cm1-Pk-IfN"/>
-                                <constraint firstItem="YlN-NQ-L39" firstAttribute="centerY" secondItem="DWq-nO-ZrQ" secondAttribute="centerY" id="e1w-rC-BTu"/>
-                                <constraint firstAttribute="width" constant="295" id="e9w-In-P51"/>
-                                <constraint firstItem="6JH-RM-Vhk" firstAttribute="top" secondItem="d3l-sb-MHT" secondAttribute="top" constant="20" id="hF9-nd-2w8"/>
-                                <constraint firstItem="7fm-7B-c7y" firstAttribute="leading" secondItem="6JH-RM-Vhk" secondAttribute="trailing" constant="20" id="ihM-vp-D1O"/>
-                                <constraint firstItem="OqI-cU-aMm" firstAttribute="leading" secondItem="6JH-RM-Vhk" secondAttribute="leading" id="lVV-cT-1va"/>
-                                <constraint firstItem="DWq-nO-ZrQ" firstAttribute="top" secondItem="fyA-zO-Zti" secondAttribute="bottom" constant="30" id="mRy-XJ-4E9"/>
-                                <constraint firstItem="g13-NC-rbX" firstAttribute="leading" secondItem="6JH-RM-Vhk" secondAttribute="leading" id="ofQ-TW-be5"/>
-                                <constraint firstItem="DWq-nO-ZrQ" firstAttribute="width" secondItem="YlN-NQ-L39" secondAttribute="width" id="qvA-MR-nx3"/>
-                                <constraint firstItem="OqI-cU-aMm" firstAttribute="top" secondItem="70c-b7-na0" secondAttribute="bottom" constant="15" id="qw3-Q5-igH"/>
-                                <constraint firstItem="1J7-r7-QMV" firstAttribute="leading" secondItem="6JH-RM-Vhk" secondAttribute="leading" id="tTc-Fr-4eN"/>
-                                <constraint firstItem="fyA-zO-Zti" firstAttribute="top" secondItem="1J7-r7-QMV" secondAttribute="bottom" constant="20" id="tZM-kM-PeT"/>
-                                <constraint firstAttribute="trailing" secondItem="YlN-NQ-L39" secondAttribute="trailing" constant="50" id="tsD-Cu-fcb"/>
-                                <constraint firstItem="6JH-RM-Vhk" firstAttribute="leading" secondItem="d3l-sb-MHT" secondAttribute="leading" constant="10" id="vdd-RM-Fep"/>
-                                <constraint firstAttribute="trailing" secondItem="70c-b7-na0" secondAttribute="trailing" constant="10" id="yK6-3d-KkF"/>
-                                <constraint firstItem="7fm-7B-c7y" firstAttribute="centerY" secondItem="6JH-RM-Vhk" secondAttribute="centerY" id="zFK-KS-ume"/>
+                                <constraint firstItem="uHn-CM-QqI" firstAttribute="centerX" secondItem="d3l-sb-MHT" secondAttribute="centerX" id="1Xh-lm-XQb"/>
+                                <constraint firstItem="g13-NC-rbX" firstAttribute="leading" secondItem="d3l-sb-MHT" secondAttribute="leading" constant="10" id="4V3-e1-euj"/>
+                                <constraint firstAttribute="width" constant="295" id="5qH-MS-z8o"/>
+                                <constraint firstAttribute="trailing" secondItem="fyA-zO-Zti" secondAttribute="trailing" constant="10" id="5yA-Yl-lmr"/>
+                                <constraint firstItem="GAv-Gy-kbb" firstAttribute="top" secondItem="g13-NC-rbX" secondAttribute="bottom" constant="15" id="6Sv-jS-REb"/>
+                                <constraint firstItem="7fm-7B-c7y" firstAttribute="leading" secondItem="6JH-RM-Vhk" secondAttribute="trailing" constant="20" id="9gc-Iy-yC6"/>
+                                <constraint firstItem="7fm-7B-c7y" firstAttribute="centerY" secondItem="6JH-RM-Vhk" secondAttribute="centerY" id="Aun-sU-hv5"/>
+                                <constraint firstAttribute="trailing" secondItem="YlN-NQ-L39" secondAttribute="trailing" constant="50" id="Hc1-LN-0A0"/>
+                                <constraint firstItem="Bv1-3j-Psr" firstAttribute="centerY" secondItem="OqI-cU-aMm" secondAttribute="centerY" id="IPw-E8-kGN"/>
+                                <constraint firstItem="fyA-zO-Zti" firstAttribute="top" secondItem="1J7-r7-QMV" secondAttribute="bottom" constant="20" id="Ibv-e1-QaI"/>
+                                <constraint firstItem="Bv1-3j-Psr" firstAttribute="leading" secondItem="OqI-cU-aMm" secondAttribute="trailing" constant="20" id="Iqd-s1-Fgn"/>
+                                <constraint firstAttribute="trailing" secondItem="70c-b7-na0" secondAttribute="trailing" constant="10" id="KyX-7z-AjS"/>
+                                <constraint firstAttribute="height" constant="450" id="LDb-AH-WeS"/>
+                                <constraint firstItem="OqI-cU-aMm" firstAttribute="leading" secondItem="6JH-RM-Vhk" secondAttribute="leading" id="LyV-yQ-kZZ"/>
+                                <constraint firstItem="J5X-Fm-jMh" firstAttribute="leading" secondItem="GAv-Gy-kbb" secondAttribute="trailing" constant="20" id="NWp-ns-7FT"/>
+                                <constraint firstItem="fyA-zO-Zti" firstAttribute="leading" secondItem="d3l-sb-MHT" secondAttribute="leading" constant="10" id="NbT-YF-j42"/>
+                                <constraint firstItem="uHn-CM-QqI" firstAttribute="leading" secondItem="d3l-sb-MHT" secondAttribute="leading" id="OY5-vZ-SJS"/>
+                                <constraint firstItem="uHn-CM-QqI" firstAttribute="top" secondItem="d3l-sb-MHT" secondAttribute="top" id="Ohb-XM-NQA"/>
+                                <constraint firstItem="DWq-nO-ZrQ" firstAttribute="width" secondItem="YlN-NQ-L39" secondAttribute="width" id="Oj0-Kq-Nj8"/>
+                                <constraint firstItem="70c-b7-na0" firstAttribute="leading" secondItem="d3l-sb-MHT" secondAttribute="leading" constant="10" id="Zpc-cf-eGb"/>
+                                <constraint firstItem="YlN-NQ-L39" firstAttribute="top" secondItem="fyA-zO-Zti" secondAttribute="bottom" constant="30" id="bRV-qI-b2i"/>
+                                <constraint firstItem="6JH-RM-Vhk" firstAttribute="top" secondItem="d3l-sb-MHT" secondAttribute="top" constant="20" id="ddX-35-WZO"/>
+                                <constraint firstItem="1J7-r7-QMV" firstAttribute="leading" secondItem="d3l-sb-MHT" secondAttribute="leading" constant="10" id="fAq-6a-sAt"/>
+                                <constraint firstItem="70c-b7-na0" firstAttribute="top" secondItem="GAv-Gy-kbb" secondAttribute="bottom" constant="15" id="g2v-iU-qkN"/>
+                                <constraint firstItem="GAv-Gy-kbb" firstAttribute="leading" secondItem="6JH-RM-Vhk" secondAttribute="leading" id="ioE-fa-iii"/>
+                                <constraint firstAttribute="trailing" secondItem="g13-NC-rbX" secondAttribute="trailing" constant="10" id="ivY-gs-w0v"/>
+                                <constraint firstItem="DWq-nO-ZrQ" firstAttribute="leading" secondItem="d3l-sb-MHT" secondAttribute="leading" constant="50" id="jLD-7u-oI1"/>
+                                <constraint firstItem="J5X-Fm-jMh" firstAttribute="centerY" secondItem="GAv-Gy-kbb" secondAttribute="centerY" id="lhz-t3-yaT"/>
+                                <constraint firstItem="Ohz-Vz-Af2" firstAttribute="centerY" secondItem="1J7-r7-QMV" secondAttribute="centerY" id="moH-OT-uWj"/>
+                                <constraint firstItem="DWq-nO-ZrQ" firstAttribute="top" secondItem="fyA-zO-Zti" secondAttribute="bottom" constant="30" id="oRU-ja-J8O"/>
+                                <constraint firstItem="OqI-cU-aMm" firstAttribute="top" secondItem="70c-b7-na0" secondAttribute="bottom" constant="15" id="psw-jc-5hZ"/>
+                                <constraint firstAttribute="bottom" secondItem="uHn-CM-QqI" secondAttribute="bottom" id="py1-tD-x4y"/>
+                                <constraint firstAttribute="trailing" secondItem="uHn-CM-QqI" secondAttribute="trailing" id="qI2-KY-bWK"/>
+                                <constraint firstItem="Ohz-Vz-Af2" firstAttribute="leading" secondItem="1J7-r7-QMV" secondAttribute="trailing" constant="10" id="rju-qB-aUH"/>
+                                <constraint firstItem="6JH-RM-Vhk" firstAttribute="leading" secondItem="d3l-sb-MHT" secondAttribute="leading" constant="10" id="snk-GN-Xir"/>
+                                <constraint firstAttribute="trailing" secondItem="Ohz-Vz-Af2" secondAttribute="trailing" constant="10" id="svk-pJ-19m"/>
+                                <constraint firstItem="g13-NC-rbX" firstAttribute="top" secondItem="6JH-RM-Vhk" secondAttribute="bottom" constant="15" id="ttN-nN-emx"/>
+                                <constraint firstItem="YlN-NQ-L39" firstAttribute="leading" secondItem="DWq-nO-ZrQ" secondAttribute="trailing" constant="10" id="vBl-KP-zZT"/>
+                                <constraint firstItem="uHn-CM-QqI" firstAttribute="centerY" secondItem="d3l-sb-MHT" secondAttribute="centerY" id="vbe-Gg-hgu"/>
+                                <constraint firstItem="1J7-r7-QMV" firstAttribute="width" secondItem="Ohz-Vz-Af2" secondAttribute="width" id="xsC-R1-esP"/>
+                                <constraint firstItem="1J7-r7-QMV" firstAttribute="top" secondItem="OqI-cU-aMm" secondAttribute="bottom" constant="15" id="yYc-Fg-BXR"/>
                             </constraints>
                         </view>
                     </subviews>
                     <constraints>
-                        <constraint firstItem="d3l-sb-MHT" firstAttribute="width" secondItem="u5s-fd-J1F" secondAttribute="width" multiplier="0.786667" id="07q-C6-01c"/>
-                        <constraint firstItem="d3l-sb-MHT" firstAttribute="centerY" secondItem="0V8-Cc-Csj" secondAttribute="centerY" id="5Vb-V6-FxD"/>
-                        <constraint firstAttribute="trailing" secondItem="d3l-sb-MHT" secondAttribute="trailing" constant="40" id="8rY-tC-avX"/>
-                        <constraint firstAttribute="bottom" secondItem="d3l-sb-MHT" secondAttribute="bottom" constant="109" id="Lgv-vO-4Ur"/>
-                        <constraint firstItem="d3l-sb-MHT" firstAttribute="centerX" secondItem="0V8-Cc-Csj" secondAttribute="centerX" id="e9J-uT-fll"/>
+                        <constraint firstItem="d3l-sb-MHT" firstAttribute="top" secondItem="0V8-Cc-Csj" secondAttribute="top" constant="108.5" id="2YJ-wh-UR4"/>
+                        <constraint firstItem="d3l-sb-MHT" firstAttribute="leading" secondItem="0V8-Cc-Csj" secondAttribute="leading" constant="40" id="9q2-32-maV"/>
+                        <constraint firstAttribute="trailing" secondItem="d3l-sb-MHT" secondAttribute="trailing" constant="40" id="Pjf-2P-Lo6"/>
+                        <constraint firstAttribute="bottom" secondItem="d3l-sb-MHT" secondAttribute="bottom" constant="108.5" id="Ra5-4C-Omt"/>
+                        <constraint firstItem="d3l-sb-MHT" firstAttribute="width" secondItem="u5s-fd-J1F" secondAttribute="width" multiplier="0.786667" id="en9-8m-pBY"/>
                     </constraints>
                     <viewLayoutGuide key="contentLayoutGuide" id="jiL-cL-yUj"/>
                     <viewLayoutGuide key="frameLayoutGuide" id="u5s-fd-J1F"/>
