--- a/Vastar/Base.lproj/LaunchScreen.storyboard
+++ b/Vastar/Base.lproj/LaunchScreen.storyboard
@@ -17,22 +17,34 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="vastarLogo" translatesAutoresizingMaskIntoConstraints="NO" id="B3r-8M-Rdm">
-                                <rect key="frame" x="120" y="118" width="135" height="431"/>
+                                <rect key="frame" x="120" y="290.5" width="135" height="86"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="135" id="5mx-dn-Zd3"/>
+                                    <constraint firstAttribute="height" constant="86" id="rpl-GW-XRI"/>
+                                </constraints>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="www.vastar.com.tw" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yiZ-dc-gb8">
+                                <rect key="frame" x="118" y="377.5" width="139" height="19.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <color key="textColor" red="0.96862745098039216" green="0.97254901960784312" blue="0.82745098039215681" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" red="0.0" green="0.14117647058823529" blue="0.086274509803921567" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="B3r-8M-Rdm" secondAttribute="trailing" constant="120" id="4KT-OX-KHF"/>
-                            <constraint firstItem="B3r-8M-Rdm" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" constant="120" id="DFm-m8-s7B"/>
-                            <constraint firstItem="B3r-8M-Rdm" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="bFG-pX-8ML"/>
-                            <constraint firstItem="B3r-8M-Rdm" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="yPm-E6-upO"/>
+                            <constraint firstItem="yiZ-dc-gb8" firstAttribute="top" secondItem="B3r-8M-Rdm" secondAttribute="bottom" constant="1" id="3ql-WA-pis"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="B3r-8M-Rdm" secondAttribute="trailing" constant="120" id="54u-vO-3zI"/>
+                            <constraint firstItem="yiZ-dc-gb8" firstAttribute="centerX" secondItem="B3r-8M-Rdm" secondAttribute="centerX" id="5em-JU-5K3"/>
+                            <constraint firstItem="B3r-8M-Rdm" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Gv5-rz-3a8"/>
+                            <constraint firstItem="B3r-8M-Rdm" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="120" id="b2A-a3-0FH"/>
+                            <constraint firstItem="B3r-8M-Rdm" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="iqV-KY-3lc"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52" y="374.66266866566718"/>
         </scene>
     </scenes>
     <resources>
