--- a/Vastar/Components/TableViewCell/shoppingCarTableViewCell.xib
+++ b/Vastar/Components/TableViewCell/shoppingCarTableViewCell.xib
@@ -10,46 +10,39 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="220" id="KGk-i7-Jjw" customClass="shoppingCarTableViewCell" customModule="Vastar" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="220"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="210" id="KGk-i7-Jjw" customClass="shoppingCarTableViewCell" customModule="Vastar" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="210"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="220"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="210"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="classed_btn" translatesAutoresizingMaskIntoConstraints="NO" id="qqZ-Rc-YoK">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="210"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="get_captcha_btn" translatesAutoresizingMaskIntoConstraints="NO" id="qqZ-Rc-YoK">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="200"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="210" id="OxP-aq-ip7"/>
+                            <constraint firstAttribute="height" constant="200" id="OxP-aq-ip7"/>
                         </constraints>
                     </imageView>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="WDn-rH-u1p">
-                        <rect key="frame" x="20" y="50" width="147" height="90"/>
+                        <rect key="frame" x="15" y="38" width="147" height="115"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="90" id="LwN-aE-Esi"/>
+                            <constraint firstAttribute="height" constant="115" id="LwN-aE-Esi"/>
                             <constraint firstAttribute="width" constant="147" id="e0M-39-uFR"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zwR-Ek-Kp9">
-                        <rect key="frame" x="182" y="85" width="107" height="20.5"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <rect key="frame" x="177" y="85" width="112" height="21.5"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vmp-OZ-SN5">
-                        <rect key="frame" x="280" y="15" width="25" height="25"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="25" id="8Pl-uZ-FDh"/>
-                            <constraint firstAttribute="height" constant="25" id="Oou-ee-ZfW"/>
-                        </constraints>
-                        <state key="normal" image="closeBtn"/>
-                    </button>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xtf-cq-xVN" customClass="CustomButton" customModule="Vastar" customModuleProvider="target">
-                        <rect key="frame" x="198" y="154" width="30" height="30"/>
+                        <rect key="frame" x="198" y="141.5" width="30" height="39"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="22"/>
                         <state key="normal" title="-"/>
                     </button>
                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qbz-5U-Y6e">
-                        <rect key="frame" x="231" y="158" width="30" height="22"/>
+                        <rect key="frame" x="231" y="150" width="30" height="22"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="30" id="GD3-77-JjF"/>
                         </constraints>
@@ -57,28 +50,37 @@
                         <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                     </textField>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="r78-kf-JVm" customClass="CustomButton" customModule="Vastar" customModuleProvider="target">
-                        <rect key="frame" x="264" y="154" width="30" height="30"/>
+                        <rect key="frame" x="264" y="143" width="30" height="36"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
                         <state key="normal" title="+"/>
+                    </button>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vmp-OZ-SN5">
+                        <rect key="frame" x="280" y="8" width="25" height="25"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="25" id="8Pl-uZ-FDh"/>
+                            <constraint firstAttribute="height" constant="25" id="Oou-ee-ZfW"/>
+                        </constraints>
+                        <state key="normal" image="closeBtn"/>
                     </button>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="qqZ-Rc-YoK" secondAttribute="bottom" constant="10" id="2Nj-Hx-jbW"/>
-                    <constraint firstItem="zwR-Ek-Kp9" firstAttribute="centerY" secondItem="WDn-rH-u1p" secondAttribute="centerY" id="4Tf-NZ-DfT"/>
-                    <constraint firstItem="qqZ-Rc-YoK" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="6b1-WW-rHz"/>
-                    <constraint firstItem="r78-kf-JVm" firstAttribute="leading" secondItem="qbz-5U-Y6e" secondAttribute="trailing" constant="3" id="AQZ-kZ-9Xc"/>
-                    <constraint firstItem="WDn-rH-u1p" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="50" id="F7V-WY-bzv"/>
-                    <constraint firstItem="qqZ-Rc-YoK" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="KFA-ol-pfx"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="zwR-Ek-Kp9" secondAttribute="trailing" constant="15" id="NuQ-64-vjS"/>
-                    <constraint firstItem="r78-kf-JVm" firstAttribute="centerY" secondItem="xtf-cq-xVN" secondAttribute="centerY" id="PGj-7Z-OYh"/>
-                    <constraint firstItem="qbz-5U-Y6e" firstAttribute="leading" secondItem="xtf-cq-xVN" secondAttribute="trailing" constant="3" id="W0h-Jg-jTp"/>
-                    <constraint firstItem="qbz-5U-Y6e" firstAttribute="centerY" secondItem="xtf-cq-xVN" secondAttribute="centerY" id="e8Q-UH-sFY"/>
-                    <constraint firstAttribute="trailing" secondItem="Vmp-OZ-SN5" secondAttribute="trailing" constant="15" id="ecV-cc-HSd"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="r78-kf-JVm" secondAttribute="bottom" constant="25" id="h2d-YN-gSP"/>
-                    <constraint firstItem="Vmp-OZ-SN5" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="15" id="mk3-Ym-S3C"/>
-                    <constraint firstAttribute="trailing" secondItem="qqZ-Rc-YoK" secondAttribute="trailing" id="mmU-hc-BRv"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="r78-kf-JVm" secondAttribute="trailing" constant="10" id="ris-bm-4UM"/>
-                    <constraint firstItem="WDn-rH-u1p" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="xet-bd-gfJ"/>
-                    <constraint firstItem="zwR-Ek-Kp9" firstAttribute="leading" secondItem="WDn-rH-u1p" secondAttribute="trailing" constant="15" id="zhH-EY-xH9"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="r78-kf-JVm" secondAttribute="bottom" constant="20" id="2qH-Ul-u5c"/>
+                    <constraint firstItem="Vmp-OZ-SN5" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="5EF-QM-f8v"/>
+                    <constraint firstAttribute="trailing" secondItem="qqZ-Rc-YoK" secondAttribute="trailing" id="64i-nS-r3R"/>
+                    <constraint firstItem="qqZ-Rc-YoK" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="8YQ-TL-mrm"/>
+                    <constraint firstItem="WDn-rH-u1p" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="BPY-bG-cHE"/>
+                    <constraint firstAttribute="bottom" secondItem="qqZ-Rc-YoK" secondAttribute="bottom" constant="10" id="C76-47-Byw"/>
+                    <constraint firstItem="WDn-rH-u1p" firstAttribute="top" secondItem="Vmp-OZ-SN5" secondAttribute="bottom" constant="5" id="ChE-9y-EgS"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="r78-kf-JVm" secondAttribute="trailing" constant="10" id="Kqm-YF-RyJ"/>
+                    <constraint firstItem="qqZ-Rc-YoK" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="Mwh-hI-AH9"/>
+                    <constraint firstAttribute="trailing" secondItem="Vmp-OZ-SN5" secondAttribute="trailing" constant="15" id="XA1-Nb-00N"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="zwR-Ek-Kp9" secondAttribute="trailing" constant="15" id="c4Y-oA-jaM"/>
+                    <constraint firstItem="qbz-5U-Y6e" firstAttribute="centerY" secondItem="xtf-cq-xVN" secondAttribute="centerY" id="j9T-2z-d0n"/>
+                    <constraint firstItem="zwR-Ek-Kp9" firstAttribute="centerY" secondItem="WDn-rH-u1p" secondAttribute="centerY" id="msY-aj-rgK"/>
+                    <constraint firstItem="zwR-Ek-Kp9" firstAttribute="leading" secondItem="WDn-rH-u1p" secondAttribute="trailing" constant="15" id="nEL-RT-Vpk"/>
+                    <constraint firstItem="r78-kf-JVm" firstAttribute="leading" secondItem="qbz-5U-Y6e" secondAttribute="trailing" constant="3" id="o9w-GF-ypa"/>
+                    <constraint firstItem="r78-kf-JVm" firstAttribute="centerY" secondItem="xtf-cq-xVN" secondAttribute="centerY" id="qFZ-CW-aoT"/>
+                    <constraint firstItem="qbz-5U-Y6e" firstAttribute="leading" secondItem="xtf-cq-xVN" secondAttribute="trailing" constant="3" id="tR7-BF-e4F"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -94,7 +96,7 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="classed_btn" width="100" height="100"/>
         <image name="closeBtn" width="16" height="16"/>
+        <image name="get_captcha_btn" width="330" height="183"/>
     </resources>
 </document>
