--- a/Vastar/SideBar/ProductViewController.xib
+++ b/Vastar/SideBar/ProductViewController.xib
@@ -31,7 +31,7 @@
                     <constraints>
                         <constraint firstAttribute="height" constant="90" id="F5W-dU-dwV"/>
                     </constraints>
-                    <state key="normal" title="Button" backgroundImage="video_frame"/>
+                    <state key="normal" title="Button" backgroundImage="classed_btn"/>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cVC-si-DbY">
                     <rect key="frame" x="50" y="165" width="125" height="120.5"/>
@@ -100,7 +100,6 @@
     </objects>
     <resources>
         <image name="classed_btn" width="100" height="100"/>
-        <image name="video_frame" width="1457" height="1071"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
